# OTP-Verfication

./: CMakeLists.txt  README.md  main.cpp  otp.cpp  otp.h
include/: otp.h  smtp.h
smtp/: smtp.cpp  smtp.h
src/: main.cpp  otp.cpp  smtp.cpp
